--- a/sdk-python/pyproject.toml
+++ b/sdk-python/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "requests>=2.31.0",
     "openai>=1.12.0",
     "build>=1.2.2.post1",
+    "jsonrpcserver[flask]",
 ]
 classifiers = [
     "Programming Language :: Python :: 3",
