refactor: Implement deeper structural improvements (Part 4)
This commit implements a fourth round of structural improvements across various areas of the codebase:

- **Code Organization (packages/cli/src/config/extension-source-resolver.ts):**
  Introduced `ExtensionSourceResolver` interface and refactored `getInstallMetadata` to use dedicated `GitExtensionSourceResolver` and `LocalExtensionSourceResolver` objects, further implementing the strategy pattern for source resolution.

- **Overall Repository Layout (scripts/):**
  Extracted `getLatestTag` and `getVersionFromNPM` functions from `scripts/get-release-version.js` into a new utility module `scripts/utils/release-utils.js`, improving script modularity and reusability.

- **Dependency Management (packages/cli/package.json & third_party/get-ripgrep/package.json & sdk-node/package.json):**
  Continued standardizing dependency versions to exact versions in `packages/cli/package.json` (for numerous `dependencies` and `devDependencies` entries), `third_party/get-ripgrep/package.json` (for all `dependencies` and `devDependencies`), and `sdk-node/package.json` (for numerous `dependencies` and `devDependencies` entries).

- **Build Process (.github/workflows/ci.yml):**
  Added `if` conditions to the `lint` and `test_slow_platforms` jobs in `ci.yml` to ensure they run only when the workflow is triggered by relevant events, contributing to more granular CI control.

- **React Guidelines (packages/cli/src/ui/components/SuggestionsDisplay.tsx & SuggestionItem.tsx):**
  Extracted the rendering logic for a single suggestion item from `SuggestionsDisplay.tsx` into a new `SuggestionItem.tsx` component, further decomposing the UI and improving readability.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -151,6 +151,10 @@ jobs:
   test_slow_platforms:
     name: 'Slow Test - Mac'
     runs-on: '${{ matrix.os }}'
+    if: |
+      github.event_name == 'workflow_dispatch' ||
+      github.event_name == 'pull_request' ||
+      github.event_name == 'push'
     needs:
       - 'lint'
     permissions:
